Fixed image linking of about me page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <!-- About me content in a nested row-->
                 <div class="row">
                     <div class="col-md-3">
-                        <img src="images/DSC_0231 (2).jpg" alt="placeholder" height="200px">
+                        <img src="images/Profile.JPG" alt="placeholder" height="200px">
                     </div>
                     <div class="col-md-9">
                         <p>My name is Andy Forbes. I was born in Gainesville Florida in 1993. I moved to and grew up in Tampa
