--- a/portfolio.html
+++ b/portfolio.html
@@ -45,6 +45,7 @@
     </nav>
     <!-- thumbnails that will link to future projects-->
     <div class="container">
+        <!-- if necessary ican add more rows to fit out extra projects on this page-->
         <div="row">
             <div class="col-md-10">
                 <div class="page-header">
