--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,7 @@
             </ul>
         </div>
     </nav>
+    <!-- have two columns for contact content and connect panel-->
     <div class="container">
         <div class="row">
             <div class="col-md-10">
