Fixed image linking for github

--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
                         <div class="row">
                             <div class="col-sm-2">
                                 <a href="https://github.com/AndyForbes93" target="_blank">
-                                    <img src="images/Github-Mark.png" height="112px">
+                                    <img src="images/GitHub-Mark.png" height="112px">
                                 </a>
                             </div>
                         </div>
