--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <a href="https://github.com/AndyForbes93" target="_blank">
-                                    <img src="images/Github-Mark.png" height="119px">
+                                    <img src="images/GitHub-Mark.png" height="119px">
                                 </a>
                             </div>
                         </div>
