added doom fighter to portfolio page and linked it

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,10 +54,10 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="thumbnail">
-                            <a href="#" target="_blank">
-                                <img src="images/fff.png" alt="Placeholder" style="width:100%">
+                            <a href="https://andyforbes93.github.io/doom_fighter/" target="_blank">
+                                <img src="images/doom_fighter.png" alt="DoomFighter" style="width:100%">
                                 <div class="caption">
-                                    <p>Placeholder for future projects</p>
+                                    <p>DOOM FIGHTER! A turn based battle game where you can slay demons, or become one!</p>
                                 </div>
                             </a>
                         </div>
