added trivia game to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -64,10 +64,10 @@
                     </div>
                     <div class="col-md-4">
                         <div class="thumbnail">
-                            <a href="#" target="_blank">
-                                <img src="images/fff.png" alt="Placeholder" style="width:100%">
+                            <a href="https://andyforbes93.github.io/TriviaGame/" target="_blank">
+                                <img src="images/hockeyTrivia.png" alt="Placeholder" style="width:100%">
                                 <div class="caption">
-                                    <p>Placeholder for future projects.</p>
+                                    <p>Hockey Trivia game.</p>
                                 </div>
                             </a>
                         </div>
