--- a/portfolio.html
+++ b/portfolio.html
@@ -74,8 +74,8 @@
                     </div>
                     <div class="col-md-4">
                         <div class="thumbnail">
-                            <a href="#" target="_blank">
-                                <img src="images/fff.png" alt="Placeholder" style="width:100%">
+                            <a href="https://andyforbes93.github.io/giphy_search/" target="_blank">
+                                <img src="images/giphy_search.png" alt="Giphy search" style="width:100%">
                                 <div class="caption">
                                     <p>Placeholder for future projects.</p>
                                 </div>
