--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
                             <a href="https://andyforbes93.github.io/TriviaGame/" target="_blank">
                                 <img src="images/hockeyTrivia.png" alt="Placeholder" style="width:100%">
                                 <div class="caption">
-                                    <p>Hockey Trivia game.</p>
+                                    <p>Hockey Trivia game. Can you answer these 5 hockey questiosn?</p>
                                 </div>
                             </a>
                         </div>
@@ -77,7 +77,7 @@
                             <a href="https://andyforbes93.github.io/giphy_search/" target="_blank">
                                 <img src="images/giphy_search.png" alt="Giphy search" style="width:100%">
                                 <div class="caption">
-                                    <p>Placeholder for future projects.</p>
+                                    <p>Searches and displays gifs based on any keyword from giphy's API.</p>
                                 </div>
                             </a>
                         </div>
